tests/netconvert/errors/ignore_errors_and_unknown_vclass/errors.netconvert
Warning: Unknown vehicle class 'error-vclass1' ignored.
Warning: Unknown vehicle class 'error-vclass2' ignored.
Warning: Unknown vehicle class 'error-vclass3' ignored.
